--- a/templates/login.html
+++ b/templates/login.html
@@ -28,8 +28,8 @@
     <h1> Trocar senha</h1>
     <p>confirme seu usuario e senha</p>
 <form method="post" action="/login">
-    <p>Username <input type="text" name="username" required></p>
-    <p>Password <input type="password" name="password" required></p>
+    <p>Usuario <input type="text" name="username" required></p>
+    <p>Senha <input type="password" name="password" required></p>
     <button type="submit">Log in</button>
 </form>
 </body>
